--- a/app/views/users/sign_up.erb
+++ b/app/views/users/sign_up.erb
@@ -1,1 +1,11 @@
-'Please enter your details below to sign up to Chitter'
+Please enter your details below to sign up to Chitter
+
+  <form action ='/users/new' method='post'>
+  Email: <input name='email' type='text'>
+  Username: <input name='username' type='text'>
+  Name: <input name='name' type='text'>
+  Password: <input name='password' type='password'>
+  Confirm password: <input name='password_confirmation' type='password'>
+  <input type='submit' value='Sign up'>
+</form>
+
