added peep model

--- a/app/views/users/welcome_page.erb
+++ b/app/views/users/welcome_page.erb
@@ -1,5 +1,7 @@
 <h1> Welcome to Chitter! </h1>
 
+<div> Please <a href='/sign_in'>click here</a> to sign in.
+
 <div>
  Not already a Chitter user? Click here to register:
 
