--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,10 @@
       </ul>
     <% end %>
 
+     <% if flash[:notice] %>
+          <%= flash[:notice] %>
+      <% end %>
+
     <%= yield %>
 
   </body>
